tests/ui/empty_struct.stderr
error: structs without any fields are not supported
 --> tests/ui/empty_struct.rs:5:5
  |
5 |     struct Empty {}
  |     ^^^^^^^^^^^^^^^
